Adding instructions to recipe

--- a/Recipe/recipe.html
+++ b/Recipe/recipe.html
@@ -21,6 +21,7 @@
 <img src="https://www.worldatlas.com/r/w960-q80/upload/91/07/a8/shutterstock-751043653.jpg" width="260" height="210" class="center">
 
 <div>
+    <h5 class="center">Meat mixture:</h5>
     <ul class="centerforText">
         <li>1.5 lb ground beef</li>
         <li>5-6 large potatoes</li>
@@ -34,14 +35,21 @@
         <li>1/2 teaspoon ginger</li>
         <li>a few pinches of cinnamon</li>
         <li>1/4 teaspoon tumeric</li>
+        <li>2 egg whites</li>
+        <h5 class="center">Coating:</h5>
+        <li>4 tablespoons fine breadcrumbs</li>
+        <li>2 large beaten egg yolks</li>
+        <li>Canola oil for frying(or airfryer)</li>
 
     </ul>
 </div>
 
 <div>
     <ol class="centerforText">
-        <li>Season meat with spices</li>
-        <li>Heat Olive oil on pan</li>
+        <li>Mix together the ground meat with the onions, parsley, cilantro, garlic, all the spices, as well as the egg whites which will help hold the mixture together.</li>
+        <li>Start peeling your potatoes!</li>
+        <li>The trick to making the little potato pouches that hold the meat is by cutting thick slices of potato with a slit through the middle that doesn't go all the way through! </li>
+        <li>Now stuff your potato pouches with the meat filling.</li>
     </ol>
 </div>
 
