Added more changes to page

--- a/Recipe/recipe.html
+++ b/Recipe/recipe.html
@@ -78,10 +78,10 @@
         <li>Take your Imbattan out when they are a crispy brown colour. Leave them to dry paper towels.</li>
         <li>Enjoy!</li>
     </ol>
-</div>
 
+<div >
 <h5>More Libyan Recipes:</h5>
-<div id="recipelinks" ></div>
+<div  id="recipelinks" ></div>
 
 <script src="script.js"></script>
  
