Added a contact form with text fields

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -10,9 +10,23 @@
 
 <body>
   <h1>Sarah B.</h1>
+  <div> </div>
   <script src="profile.js"></script>
 
- 
+ <div>
+     <h4>Put your contact info here:</h4>
+  <form>
+    <label for="name">Name:</label>
+    <input id="name" type="text" name="name"> 
+    <br>
+    <label for="email">Email:</label>
+    <input id="email" type="text" name="email"> 
+    <br>
+    <label for="phonenumber">Phone #:</label>
+    <input id="phonenumber" type="text" name="phonenumber"> 
+  </form>
+
+  </div>
 </body>
 
 </html>
