Adding boxes using flexbox

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -9,10 +9,34 @@
 </head>
 
 <body>
-  <h1>Sarah B.</h1>
-  <div> </div>
-  <script src="profile.js"></script>
+    
 
+<div id="container1" class="container1">
+
+
+    <div id="divname" >
+  <h2>Sarah B.</h2>
+   </div>
+
+  <div id="divpic" >
+      <h2>Picture:</h2>
+  </div>
+
+<div id="divlang">
+    <h2>Languages:</h2>
+</div>
+
+
+</div>
+
+
+
+<br>
+
+
+
+
+ 
  <div>
      <h4>Put your contact info here:</h4>
   <form>
@@ -25,8 +49,10 @@
     <label for="phonenumber">Phone #:</label>
     <input id="phonenumber" type="text" name="phonenumber"> 
   </form>
-
   </div>
+
+
+  <script src="profile.js"></script>
 </body>
 
 </html>
