--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -19,7 +19,7 @@
    </div>
 
   <div id="divpic" >
-      <h2>Picture:</h2>
+      <img src="https://lh3.googleusercontent.com/mZR4C2Z0drcIV1TRez8kdhWrrJnzYxU2JXTOVnloRLpVAonN7-DpSd_FMpHZnsUMgwpwTWnl-NJDEqh-x414AObtOiDwFJaBXQFOE9NnuKucfV6-SyzYlgGFNVaQPOZxwsx818FFNfOJpuYgyEe-2bae96UOmsThOOyepvv7yFJwXllPGiZRpucvQqcoGCd6igcOV_tnW8inZeH0IExrfqXzd3Gzom9ynmOkXZJ38N8tiAT9-nbpq-62kbgxWqfG37p0NFoQ8blCHTFeLJH8QDJ__ZoOa3fXRLijWhYqJQtBGN_izBIrNuG_4TV33H-D3PFG-XGGLuWmE5RpI5Abk3rr8qwKB8SavC7vpFroiEj0JH9WHPBNLzLu2vVMCNjon5Ju-ss_2AWgPw_6HqvBTR_I9lMXVaM9Iqhdvvz8XH-hvSZOzPkSZlSBYnLtrPsrvtj2FiS6S4lbKt5rCpls5NZgvf3oZi5cWXJeUgrtmjjeJgxO3wiRu60rq9J4WYzS6y8FCh3E7BRZZsVFqmJ3JB21yKhlSX3Z845EjQjZwNtEDkDCtZnUqojM_LaBk0qlBRQwWL9XRUAkAb9tMojela7i2OZ5xWi7VEvYOU8C1Qi4OsKtjspC9d0rdBEXOhXWoSuj8XPF-S1ZfnrWKEc5lhwTPHmFrM9NqEGRfvQv4n4-XrSt_4vceQrB1plOBBJlUraOPv2V23THHxSX_4AXCGJlfyBRx6Na20qCGryjICdndNcKq3_2yG-y2ETUWvcxFZimO66FsTnD93_6ZvMSOwUi7ey2mYoStGjUJwRhMQR3G5IfRa3Yrrtt2HHBADCbWsKY6OxAYq6dsa1Rn5B7qbkl2qqCoRrKTxmZMXuGG4AuLg8V6uGFp0MErLGKp5wdtanz5uQEvhndYd_hnxZuLHxP2LnOXgMPEsrqOnTxz9k=s1290-no?authuser=0" alt="Avatar">
   </div>
 
 <div id="divlang">
@@ -50,7 +50,7 @@
     <input id="phonenumber" type="text" name="phonenumber"> 
   </form>
   </div>
-
+  
 
   <script src="profile.js"></script>
 </body>
