--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -16,6 +16,8 @@
 
     <div id="divname" >
   <h2>Sarah B.</h2>
+        <p> Software Engineer in training</p><br>
+        <
    </div>
 
   <div id="divpic" >
