Filling out each box section

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -16,8 +16,8 @@
 
     <div id="divname" >
   <h2>Sarah B.</h2>
-        <p> Software Engineer in training</p><br>
-        <
+        <p> Software Engineer in training at Techtonica.<br>Loves to code.<br> Loves chocolate.</p>
+        
    </div>
 
   <div id="divpic" >
@@ -26,6 +26,7 @@
 
 <div id="divlang">
     <h2>Languages:</h2>
+    <p>Javascript<br>Git <br> CSS <br> HTML <br> React (soon)</p>
 </div>
 
 
