--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -47,14 +47,19 @@
  <div>
      <h4>Put your contact info here:</h4>
   <form>
-    <label for="name">Name:</label>
+      
+    <label for="name">Name:
     <input id="name" type="text" name="name"> 
-    <br>
-    <label for="email">Email:</label>
+     </label>
+
+  
+    <label for="email">Email:
     <input id="email" type="text" name="email"> 
-    <br>
-    <label for="phonenumber">Phone #:</label>
-    <input id="phonenumber" type="text" name="phonenumber"> 
+    </label>
+    
+    <label for="phonenumber">Phone #:
+    <input id="phonenumber" type="text" name="phonenumber">
+    </label> 
   </form>
   </div>
 
