--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width">
   <title>My Profile Page</title>
   <link href="profile.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
+  <!-- Line 9 is where I added a bootstrap link to their css library-->
 </head>
 
 <body>
@@ -44,7 +46,7 @@
 
 
  
- <div>
+ <div id="bottomleftdiv">
      <h4>Put your contact info here:</h4>
   <form>
       
@@ -63,6 +65,7 @@
   </form>
   </div>
 
+  <div id="bottommiddlediv"> <i class="bi bi-twitter"></i></div>
 
   <script src="profile.js"></script>
 </body>
