--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -64,7 +64,7 @@
           <input id="email" type="text" name="email">
         </label>
 
-        <label for="phonenumber">Phone #:
+        <label for="phonenumber">Phone:
           <input id="phonenumber" type="text" name="phonenumber">
         </label>
 
