Added some different font styles

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
   <!-- Line 9 is where I added a bootstrap link to their css library-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chakra Petch">
+  <!-- Line above this is where I added Google fonts library-->
 </head>
 
 <body>
@@ -19,7 +21,7 @@
 
     <div id="divname">
       <h2>Sarah B.</h2>
-      <p> Software Engineer in training at Techtonica.<br>Loves to code.<br> Loves chocolate.</p>
+      <p class="paragraph"> Software Engineer in training @ Techtonica.<br>Loves to code.<br> Loves chocolate.</p>
 
     </div>
 
@@ -31,7 +33,7 @@
 
     <div id="divlang">
       <h2>Languages:</h2>
-      <p>Javascript<br>Git <br> CSS <br> HTML <br> React (soon)</p>
+      <p class="paragraph">Javascript<br>Git <br> CSS <br> HTML <br> React (soon)</p>
     </div>
 
 
@@ -73,7 +75,7 @@
     </div>
 
     <div id="bottommiddlediv">
-      <h3>Social Media</h3> <a href="https://twitter.com/sarahtech2022"> <i class="bi bi-twitter"></i> </a> <a
+      <h3>Find me here!</h3> <a href="https://twitter.com/sarahtech2022"> <i class="bi bi-twitter"></i> </a> <a
         href="https://www.linkedin.com/in/sarahabense/"><i class="bi bi-linkedin"></i></a> <a
         href="https://github.com/sarahtech2022"><i class="bi bi-github"></i></a>
       </div>
