Adding my projects to the project div

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -26,7 +26,7 @@
     </div>
 
     <div id="divpic">
-      <img
+      <img id="mypic"
         src="https://lh3.googleusercontent.com/mZR4C2Z0drcIV1TRez8kdhWrrJnzYxU2JXTOVnloRLpVAonN7-DpSd_FMpHZnsUMgwpwTWnl-NJDEqh-x414AObtOiDwFJaBXQFOE9NnuKucfV6-SyzYlgGFNVaQPOZxwsx818FFNfOJpuYgyEe-2bae96UOmsThOOyepvv7yFJwXllPGiZRpucvQqcoGCd6igcOV_tnW8inZeH0IExrfqXzd3Gzom9ynmOkXZJ38N8tiAT9-nbpq-62kbgxWqfG37p0NFoQ8blCHTFeLJH8QDJ__ZoOa3fXRLijWhYqJQtBGN_izBIrNuG_4TV33H-D3PFG-XGGLuWmE5RpI5Abk3rr8qwKB8SavC7vpFroiEj0JH9WHPBNLzLu2vVMCNjon5Ju-ss_2AWgPw_6HqvBTR_I9lMXVaM9Iqhdvvz8XH-hvSZOzPkSZlSBYnLtrPsrvtj2FiS6S4lbKt5rCpls5NZgvf3oZi5cWXJeUgrtmjjeJgxO3wiRu60rq9J4WYzS6y8FCh3E7BRZZsVFqmJ3JB21yKhlSX3Z845EjQjZwNtEDkDCtZnUqojM_LaBk0qlBRQwWL9XRUAkAb9tMojela7i2OZ5xWi7VEvYOU8C1Qi4OsKtjspC9d0rdBEXOhXWoSuj8XPF-S1ZfnrWKEc5lhwTPHmFrM9NqEGRfvQv4n4-XrSt_4vceQrB1plOBBJlUraOPv2V23THHxSX_4AXCGJlfyBRx6Na20qCGryjICdndNcKq3_2yG-y2ETUWvcxFZimO66FsTnD93_6ZvMSOwUi7ey2mYoStGjUJwRhMQR3G5IfRa3Yrrtt2HHBADCbWsKY6OxAYq6dsa1Rn5B7qbkl2qqCoRrKTxmZMXuGG4AuLg8V6uGFp0MErLGKp5wdtanz5uQEvhndYd_hnxZuLHxP2LnOXgMPEsrqOnTxz9k=s1290-no?authuser=0"
         alt="Avatar">
     </div>
@@ -44,7 +44,8 @@
 
 
   <div id="container2">
-    <h2>My Recent Projects</h2>
+    <h2>My Recent Projects</h2><br>
+      <img id="recipe1pic" src="https://lh3.googleusercontent.com/jv7-3Dn8lsNdnGK06eZECikhIj4gAMYKNHXhaaU0kFfKEo8FD5DYD4tlSrB9KVcpsNpnPpg-8o_T5ClQ_UEADl7tg5oVTG7kuwB7qI-A7AHBOpWIrVturY1UwyWvGbhywd7M5u7e1E_TSTVSzfwjrowrADJRzJdfwe6cklvJ-6R9D5hUpjTXr_erW996VOrKN_gycoMdbM2af_BykuieidHOAab8viHl_BEWVwrIGQcLYZ_2vPGPyzyAoE2gFqnWIyTpvnZFSeeiKIIHB1AV_dJDJweAxxtMdZ8RVJYeHQGGUAU8OIt2Ar63t1lKUTdaiPnpGCozw92MrTFAPDhvUVGUh5_sC8PGIt8rR-h0QdtwLKKITr-zofhTZHTMVdZ7-lCgFAkXx4DeVfLxA8-InPfPUIki7a3qjf7hK00dp6QB0ELTUgoNFTCgA6JvkfWOxPD_5it0eCm2ifFP1-lCuhSZTkx-z4FFBTf6R6Q5D3vS7h1jfVMOC7RaOwk0MgOKFOjHQkGlo27hokX3qIpxK6UG_E_fe7i7q6rh6wOOmHxuctlulfMLsbPWNWjyYZvpQvO6WNRsFj6CHvCLF6TFpSsWUuVAf313hE4UxKXLRQaJ_CuwdyaWsWA98rnQxzLPPZJbYqwUmPLP80clMzwcGWAUbLklnZO-k0huKYq87ZRJPSzkRYlj6Ne8yUTM_laSRXDL7Y5sS06v-ABgyCBwtisBVOInuQb2eBbrx4705AkTIBJLk-pS9mYUHkrZyrHsnvlOHHLmCNMFYHPnnMjDvoH2thcCDsakMGY7Jc5O7I9_Dp9KaCQTGqR6-_Sg-Mr7FG__FSxXZLMSU1_3-ZxZ-VTJP3RRRLvprs-HS_x2mmA6vcPjnhYuUw8-Wr44YU8vPkSY4Rmb3UB5WJkEGl5TVRxkziabz71KRyGMQqZY-RI=w1530-h1704-no?authuser=0">
   </div>
 
   <br>
