added address field and made the first 3 fields required

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -59,17 +59,21 @@
       <h4>Put your contact info here:</h4>
       <form>
 
-        <label for="name">Name:
-          <input id="name" type="text" name="name">
+        <label class="move" for="name">Name:
+          <input required id="name" type="text" name="name">
         </label>
 
 
-        <label for="email">Email:
-          <input id="email" type="text" name="email">
+        <label class="move" for="email">Email:
+          <input required id="email" type="text" name="email">
         </label>
 
-        <label for="phonenumber">Phone:
-          <input id="phonenumber" type="text" name="phonenumber">
+        <label class="move2" for="phonenumber">Phone:
+          <input required id="phonenumber" type="text" name="phonenumber">
+        </label>
+
+        <label for="address">Address:
+          <input id="address" type="text" name="address">
         </label>
 
         <input type="submit" id="submitbutton" value="Send">
