--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -44,9 +44,16 @@
 
 
   <div id="container2">
-    <h2>My Recent Projects</h2><br>
+
+    <div id="divtitle">
+    <h2 id="specialh2" style="text-align:center">My Recent Projects</h2><br>
+    </div>
+
+    <div id="divpics">
     <a href="https://github.com/sarahtech2022/TechtonicaAssignments/tree/recipefirst"> <img id="recipe1pic" src="https://lh3.googleusercontent.com/jv7-3Dn8lsNdnGK06eZECikhIj4gAMYKNHXhaaU0kFfKEo8FD5DYD4tlSrB9KVcpsNpnPpg-8o_T5ClQ_UEADl7tg5oVTG7kuwB7qI-A7AHBOpWIrVturY1UwyWvGbhywd7M5u7e1E_TSTVSzfwjrowrADJRzJdfwe6cklvJ-6R9D5hUpjTXr_erW996VOrKN_gycoMdbM2af_BykuieidHOAab8viHl_BEWVwrIGQcLYZ_2vPGPyzyAoE2gFqnWIyTpvnZFSeeiKIIHB1AV_dJDJweAxxtMdZ8RVJYeHQGGUAU8OIt2Ar63t1lKUTdaiPnpGCozw92MrTFAPDhvUVGUh5_sC8PGIt8rR-h0QdtwLKKITr-zofhTZHTMVdZ7-lCgFAkXx4DeVfLxA8-InPfPUIki7a3qjf7hK00dp6QB0ELTUgoNFTCgA6JvkfWOxPD_5it0eCm2ifFP1-lCuhSZTkx-z4FFBTf6R6Q5D3vS7h1jfVMOC7RaOwk0MgOKFOjHQkGlo27hokX3qIpxK6UG_E_fe7i7q6rh6wOOmHxuctlulfMLsbPWNWjyYZvpQvO6WNRsFj6CHvCLF6TFpSsWUuVAf313hE4UxKXLRQaJ_CuwdyaWsWA98rnQxzLPPZJbYqwUmPLP80clMzwcGWAUbLklnZO-k0huKYq87ZRJPSzkRYlj6Ne8yUTM_laSRXDL7Y5sS06v-ABgyCBwtisBVOInuQb2eBbrx4705AkTIBJLk-pS9mYUHkrZyrHsnvlOHHLmCNMFYHPnnMjDvoH2thcCDsakMGY7Jc5O7I9_Dp9KaCQTGqR6-_Sg-Mr7FG__FSxXZLMSU1_3-ZxZ-VTJP3RRRLvprs-HS_x2mmA6vcPjnhYuUw8-Wr44YU8vPkSY4Rmb3UB5WJkEGl5TVRxkziabz71KRyGMQqZY-RI=w1530-h1704-no?authuser=0"></a>
       <br> <a href="https://github.com/sarahtech2022/TechtonicaAssignments/tree/recipe-with-DOM"> <img id="recipe2pic" src="https://lh3.googleusercontent.com/JURdYA3WfwdSOqzZTkdi5k1kdEiLVr1Yw30o8yVsYWqY1_C1Ws1k7PSogpXCVZu3n29y3rDI9mr4pKGm7tPhlCM3olFH_NK-x_LbDseZFI8V0onLtmXM6ebquXCMF7v67OhVQ9-TVIc41qikBRU0o1uUT7JsQlgrxN2j0KZzi3JDtA7dxTTEfUtJTwZJ8MzL9aDtOQaQZvT-v3Ffx-vFfBmpBAviyIFZs9y-wJZbVcHmYYdgXDWsJKVcArJc0QsU5VrV5E8i825DawB2X2zdrc-BpvXMMEfzDiCm4OubjiWq6rRkG42gbwy351x7kBRcDb-Tk2c5Y8IjRWBbP9Flk3yr-XUxrp4_cSF0Pb6V5M9biolx1ForNPXhLOdRVC0en1AZW-uE1WvIVuT4MefH1dYvFX0MadOBaGy53bv5UNP_hduyCVCPk2GgFGX3U8X2La60TK9h7gDq0c6y-bukmlGxw_rPAKAGQswISmYxmglYDTpS7DVD22DGsVSibVXOpBTbH-zJS53IyzRLXdXmqpqWLx60a94SovswdSUMWIQEnGpCUY75qOwZVHZ2cFzu3dx9iXuW3umBif_sNgwq72A7uN0gGkNBgebRakEiFhGl6nYlDgxy9O6gbosC8maHoriUOxtIHzQPRYSZOuJl4kNu7TIm3kLTQfGA1U9yuJntRhBqH4svo37tCzhVdHev0wof2WEb3nBKwUPoCp9wvwZHvTm6gkwNVwrnL0sBEcVqYUEan5uM2OsrWJV_o3W0aj8HDVjRPz_i2SfJ3eA5gtSvQdVMr5JVmyNhRteZ4x3T4ngMm6xy4JKuDDoSZk4SF_qLMgBVkFuzWBXcoMb78PzLoMjvV6nEpdXSCXkyK6zgkzbH7jkpVJ21PgVWlXMjZYjLhAGXYypTzbmUi7PZMtxn5FdRuwhxvAVT-qSJ58g=w1868-h1332-no?authuser=0"></a>
+    </div>
+   
     </div>
 
   <br>
