changed language title text

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -32,7 +32,7 @@
     </div>
 
     <div id="divlang">
-      <h2>Languages:</h2>
+      <h2>Languages</h2>
       <p class="paragraph">Javascript<br>Git <br> CSS <br> HTML <br> React (soon)</p>
     </div>
 
