--- a/EventPage/EventPage.html
+++ b/EventPage/EventPage.html
@@ -9,7 +9,7 @@
       <!-- EVENTS GET INSERTED HERE -->
     </ul>
   </body>
-  <script src="./event.js"></script>
+  <script src="EventPage.js"></script>
 </html>
 
 
