adding ids to our buttons and using query selector to access button elements

--- a/Game/Game.html
+++ b/Game/Game.html
@@ -24,12 +24,12 @@
 
          <!-- inside container: flip coin button -->
         <div id="flipbuttondiv">
-        <button type="button">Flip Coin!</button>
+        <button id="flipbutton" type="button">Flip Coin!</button>
         </div>
 
         <!-- inside container: reset button -->
         <div id="resetbuttondiv">
-            <button type="button">Reset!</button>
+            <button id="flipbutton" type="button">Reset!</button>
         </div>
 
         <!-- inside container: score -->
