removed submit button because not needed and added disable butt on function so that the flip button is disabled for 5 sec after clicking

--- a/Game/Game.html
+++ b/Game/Game.html
@@ -26,13 +26,13 @@
          <span>GUESS- Heads or Tail?</span>
          <div id="guessinputdiv">
             <label for="heads">Heads</label>
-            <input id="heads" type="radio">
+            <input id="heads" type="radio" name="radio">
 
             <label for="tails">Tails</label>
-            <input id="tails" type="radio">
+            <input id="tails" type="radio" name="radio">
             </div>
 
-            <input type="submit" value="Submit"> <br> <br>
+         
 
 
          <!-- inside container: flip coin button -->
