adding js functionality to the game and added a result div

--- a/Game/Game.html
+++ b/Game/Game.html
@@ -43,7 +43,13 @@
         <!-- inside container: reset button -->
         <div id="resetbuttondiv">
             <button id="flipbutton" type="button">Reset!</button>
-        </div>
+        </div> <br>
+
+        <!-- inside container: result-->
+        <div id="resultdiv">
+
+        </div> <br>
+
 
         <!-- inside container: score -->
         <div id="scorediv">
