fixed radio buttons because the name of radio buttons creates a group of radio buttons and the value ensures that the info we get isnt undefined

--- a/Game/Game.html
+++ b/Game/Game.html
@@ -26,10 +26,10 @@
          <span>GUESS- Heads or Tail?</span>
          <div id="guessinputdiv">
             <label for="heads">Heads</label>
-            <input id="heads" type="radio" name="radio">
+            <input id="heads" type="radio" name="radioOption" value="coinside">
 
             <label for="tails">Tails</label>
-            <input id="tails" type="radio" name="radio">
+            <input id="tails" type="radio" name="radioOption" value="coinside">
             </div>
 
          
