got my game to work

--- a/Game/Game.html
+++ b/Game/Game.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
-    <script scr="Game.js"></script>
     <link rel="stylesheet" href="Game.css">
 </head>
 <body>
@@ -26,10 +25,10 @@
          <span>GUESS- Heads or Tail?</span>
          <div id="guessinputdiv">
             <label for="heads">Heads</label>
-            <input id="heads" type="radio" name="radioOption" value="coinside">
+            <input id="heads" type="radio" name="radioOption" value="heads">
 
             <label for="tails">Tails</label>
-            <input id="tails" type="radio" name="radioOption" value="coinside">
+            <input id="tails" type="radio" name="radioOption" value="tails">
             </div>
 
          
@@ -59,6 +58,6 @@
 
 
  </div>
-   
+ <script src="Game.js"></script>
 </body>
 </html>
