--- a/Game/Game.html
+++ b/Game/Game.html
@@ -9,25 +9,25 @@
 </head>
 <body>
     <!-- Title Div section-->
-    <div id="gamediv">
-        <h1>Coin Flip Game</h1>
+    <div id="gamediv" class="center">
+        <h1 id="titleText">Coin Flip Game</h1>
     </div> <br>
 
      <!-- Container Div section-->
- <div id="container1">
+ <div id="container1" >
 
          <!-- inside container: picture-->
-        <div id="picdiv">
-        <img id="coinpic" src="https://w1.pngwing.com/pngs/383/959/png-transparent-coin-flipping-finger-cartoon-drawing-hand-text-thumb-line-arm.png">
+        <div id="picdiv" class="center">
+        <img id="coinpic" src="https://media.istockphoto.com/id/547201522/vector/coin-flip.jpg?s=612x612&w=0&k=20&c=sCv-hxguTL2LhoQAPQM_B3VveI3e2h8L_R0u8nAENlU=">
         </div>
 
          <!-- inside container: guess input -->
-         <span>GUESS- Heads or Tail?</span>
-         <div id="guessinputdiv">
-            <label for="heads">Heads</label>
+         <h4 class="center">GUESS- Heads or Tail?</h4>
+         <div id="guessinputdiv" class="center">
+            <label for="heads" class="center">Heads</label>
             <input id="heads" type="radio" name="radioOption" value="heads">
 
-            <label for="tails">Tails</label>
+            <label for="tails" class="center">Tails</label>
             <input id="tails" type="radio" name="radioOption" value="tails">
             </div>
 
@@ -35,13 +35,13 @@
 
 
          <!-- inside container: flip coin button -->
-        <div id="flipbuttondiv">
+        <div id="flipbuttondiv" >
         <button id="flipbutton" type="button">Flip Coin!</button>
-        </div>
+        </div> <br>
 
         <!-- inside container: reset button -->
         <div id="resetbuttondiv">
-            <button id="flipbutton" type="button">Reset!</button>
+            <button id="resetbutton" type="button">Reset!</button>
         </div> <br>
 
         <!-- inside container: result-->
