removing center class and will add everything in one big div to center

--- a/Game/Game.html
+++ b/Game/Game.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Title Div section-->
-    <div id="gamediv" class="center">
+    <div id="gamediv" >
         <h1 id="titleText">Coin Flip Game</h1>
     </div> <br>
 
@@ -17,17 +17,17 @@
  <div id="container1" >
 
          <!-- inside container: picture-->
-        <div id="picdiv" class="center">
+        <div id="picdiv" >
         <img id="coinpic" src="https://media.istockphoto.com/id/547201522/vector/coin-flip.jpg?s=612x612&w=0&k=20&c=sCv-hxguTL2LhoQAPQM_B3VveI3e2h8L_R0u8nAENlU=">
         </div>
 
          <!-- inside container: guess input -->
-         <h4 class="center">GUESS- Heads or Tail?</h4>
-         <div id="guessinputdiv" class="center">
-            <label for="heads" class="center">Heads</label>
+         <h4>GUESS- Heads or Tail?</h4>
+         <div id="guessinputdiv">
+            <label for="heads" >Heads</label>
             <input id="heads" type="radio" name="radioOption" value="heads">
 
-            <label for="tails" class="center">Tails</label>
+            <label for="tails" >Tails</label>
             <input id="tails" type="radio" name="radioOption" value="tails">
             </div>
 
@@ -37,15 +37,15 @@
          <!-- inside container: flip coin button -->
         <div id="flipbuttondiv" >
         <button id="flipbutton" type="button">Flip Coin!</button>
-        </div> <br>
+        </div> 
 
         <!-- inside container: reset button -->
-        <div id="resetbuttondiv">
+        <div id="resetbuttondiv" >
             <button id="resetbutton" type="button">Reset!</button>
         </div> <br>
 
         <!-- inside container: result-->
-        <div id="resultdiv">
+        <div id="resultdiv" >
          
         </div> <br>
 
