added css style to buttons

--- a/Game/Game.html
+++ b/Game/Game.html
@@ -13,7 +13,8 @@
   <div id="mainDiv">
     <!-- Title Div section-->
     <div id="gamediv" class="center">
-      <h1 id="titleText">Coin Flip Game</h1>
+      <h1 id="titleText" class="glitch"><span aria-hidden="true">Coin Flip Game</span><span aria-hidden="true">Coin Flip
+          Game</span><span aria-hidden="true">Coin Flip Game</span></h1>
     </div> <br>
 
     <!-- Container Div section-->
@@ -26,7 +27,7 @@
       </div>
 
       <!-- inside container: guess input -->
-      <h4 class="center">GUESS- Heads or Tail?</h4>
+      <h4 class="center">GUESS - Heads or Tail?</h4>
       <div id="guessinputdiv" class="center">
         <label for="heads" class="center">Heads</label>
         <input id="heads" type="radio" name="radioOption" value="heads">
